tree-sitter-markdown/corpus/spec.txt
================================================================================
Example 1 - https://github.github.com/gfm/#example-1
================================================================================
	foo	baz		bim

--------------------------------------------------------------------------------

(document
  (indented_code_block))

================================================================================
Example 2 - https://github.github.com/gfm/#example-2
================================================================================
  	foo	baz		bim

--------------------------------------------------------------------------------

(document
  (indented_code_block))

================================================================================
Example 3 - https://github.github.com/gfm/#example-3
================================================================================
    a	a
    ὐ	a

--------------------------------------------------------------------------------

(document
  (indented_code_block
    (block_continuation)))

================================================================================
Example 4 - https://github.github.com/gfm/#example-4
================================================================================
  - foo

	bar

--------------------------------------------------------------------------------

(document
  (list
    (list_item
      (list_marker_minus)
      (paragraph
        (inline)
        (block_continuation))
      (block_continuation)
      (paragraph
        (inline)))))

================================================================================
Example 5 - https://github.github.com/gfm/#example-5
================================================================================
- foo

		bar

--------------------------------------------------------------------------------

(document
  (list
    (list_item
      (list_marker_minus)
      (paragraph
        (inline)
        (block_continuation))
      (block_continuation)
      (indented_code_block))))

================================================================================
Example 6 - https://github.github.com/gfm/#example-6
================================================================================
>		foo

--------------------------------------------------------------------------------

(document
  (block_quote
    (block_quote_marker)
    (indented_code_block)))

================================================================================
Example 7 - https://github.github.com/gfm/#example-7
================================================================================
-		foo

--------------------------------------------------------------------------------

(document
  (list
    (list_item
      (list_marker_minus)
      (indented_code_block))))

================================================================================
Example 8 - https://github.github.com/gfm/#example-8
================================================================================
    foo
	bar

--------------------------------------------------------------------------------

(document
  (indented_code_block
    (block_continuation)))

================================================================================
Example 9 - https://github.github.com/gfm/#example-9
================================================================================
 - foo
   - bar
	 - baz

--------------------------------------------------------------------------------

(document
  (list
    (list_item
      (list_marker_minus)
      (paragraph
        (inline)
        (block_continuation))
      (list
        (list_item
          (list_marker_minus)
          (paragraph
            (inline)
            (block_continuation))
          (list
            (list_item
              (list_marker_minus)
              (paragraph
                (inline)))))))))

================================================================================
Example 10 - https://github.github.com/gfm/#example-10
================================================================================
#	Foo

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h1_marker)
    (inline)))

================================================================================
Example 11 - https://github.github.com/gfm/#example-11
================================================================================
*	*	*

--------------------------------------------------------------------------------

(document
  (thematic_break))

================================================================================
Example 12 - https://github.github.com/gfm/#example-12
================================================================================
- `one
- two`

--------------------------------------------------------------------------------

(document
  (list
    (list_item
      (list_marker_minus)
      (paragraph
        (inline)))
    (list_item
      (list_marker_minus)
      (paragraph
        (inline)))))

================================================================================
Example 13 - https://github.github.com/gfm/#example-13
================================================================================
***
---
___

--------------------------------------------------------------------------------

(document
  (thematic_break)
  (thematic_break)
  (thematic_break))

================================================================================
Example 14 - https://github.github.com/gfm/#example-14
================================================================================
+++

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)))

================================================================================
Example 15 - https://github.github.com/gfm/#example-15
================================================================================
=

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)))

================================================================================
Example 16 - https://github.github.com/gfm/#example-16
================================================================================
--
**
__

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)
    (inline)
    (inline)))

================================================================================
Example 17 - https://github.github.com/gfm/#example-17
================================================================================
 ***
  ***
   ***

--------------------------------------------------------------------------------

(document
  (thematic_break)
  (thematic_break)
  (thematic_break))

================================================================================
Example 18 - https://github.github.com/gfm/#example-18
================================================================================
    ***

--------------------------------------------------------------------------------

(document
  (indented_code_block))

================================================================================
Example 19 - https://github.github.com/gfm/#example-19
================================================================================
Foo
    ***

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)
    (inline)))

================================================================================
Example 20 - https://github.github.com/gfm/#example-20
================================================================================
_____________________________________

--------------------------------------------------------------------------------

(document
  (thematic_break))

================================================================================
Example 21 - https://github.github.com/gfm/#example-21
================================================================================
 - - -

--------------------------------------------------------------------------------

(document
  (thematic_break))

================================================================================
Example 22 - https://github.github.com/gfm/#example-22
================================================================================
 **  * ** * ** * **

--------------------------------------------------------------------------------

(document
  (thematic_break))

================================================================================
Example 23 - https://github.github.com/gfm/#example-23
================================================================================
-     -      -      -

--------------------------------------------------------------------------------

(document
  (thematic_break))

================================================================================
Example 24 - https://github.github.com/gfm/#example-24
================================================================================
- - - -

--------------------------------------------------------------------------------

(document
  (thematic_break))

================================================================================
Example 25 - https://github.github.com/gfm/#example-25
================================================================================
_ _ _ _ a

a------

---a---

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline))
  (paragraph
    (inline))
  (paragraph
    (inline)))

================================================================================
Example 26 - https://github.github.com/gfm/#example-26
================================================================================
 *-*

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)))

================================================================================
Example 27 - https://github.github.com/gfm/#example-27
================================================================================
- foo
***
- bar

--------------------------------------------------------------------------------

(document
  (list
    (list_item
      (list_marker_minus)
      (paragraph
        (inline))))
  (thematic_break)
  (list
    (list_item
      (list_marker_minus)
      (paragraph
        (inline)))))

================================================================================
Example 28 - https://github.github.com/gfm/#example-28
================================================================================
Foo
***
bar

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline))
  (thematic_break)
  (paragraph
    (inline)))

================================================================================
Example 29 - https://github.github.com/gfm/#example-29
================================================================================
Foo
---
bar

--------------------------------------------------------------------------------

(document
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline))
  (paragraph
    (inline)))

================================================================================
Example 30 - https://github.github.com/gfm/#example-30
================================================================================
* Foo
* * *
* Bar

--------------------------------------------------------------------------------

(document
  (list
    (list_item
      (list_marker_star)
      (paragraph
        (inline))))
  (thematic_break)
  (list
    (list_item
      (list_marker_star)
      (paragraph
        (inline)))))

================================================================================
Example 31 - https://github.github.com/gfm/#example-31
================================================================================
- Foo
- * * *

--------------------------------------------------------------------------------

(document
  (list
    (list_item
      (list_marker_minus)
      (paragraph
        (inline)))
    (list_item
      (list_marker_minus)
      (thematic_break))))

================================================================================
Example 32 - https://github.github.com/gfm/#example-32
================================================================================
# foo
## foo
### foo
#### foo
##### foo
###### foo

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h1_marker)
    (inline))
  (atx_heading
    (atx_h2_marker)
    (inline))
  (atx_heading
    (atx_h3_marker)
    (inline))
  (atx_heading
    (atx_h4_marker)
    (inline))
  (atx_heading
    (atx_h5_marker)
    (inline))
  (atx_heading
    (atx_h6_marker)
    (inline)))

================================================================================
Example 33 - https://github.github.com/gfm/#example-33
================================================================================
####### foo

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)))

================================================================================
Example 34 - https://github.github.com/gfm/#example-34
================================================================================
#5 bolt

#hashtag

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline))
  (paragraph
    (inline)))

================================================================================
Example 35 - https://github.github.com/gfm/#example-35
================================================================================
\## foo

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)))

================================================================================
Example 36 - https://github.github.com/gfm/#example-36
================================================================================
# foo *bar* \*baz\*

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h1_marker)
    (inline)))

================================================================================
Example 37 - https://github.github.com/gfm/#example-37
================================================================================
#                  foo

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h1_marker)
    (inline)))

================================================================================
Example 38 - https://github.github.com/gfm/#example-38
================================================================================
 ### foo
  ## foo
   # foo

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h3_marker)
    (inline))
  (atx_heading
    (atx_h2_marker)
    (inline))
  (atx_heading
    (atx_h1_marker)
    (inline)))

================================================================================
Example 39 - https://github.github.com/gfm/#example-39
================================================================================
    # foo

--------------------------------------------------------------------------------

(document
  (indented_code_block))

================================================================================
Example 40 - https://github.github.com/gfm/#example-40
================================================================================
foo
    # bar

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)
    (inline)))

================================================================================
Example 41 - https://github.github.com/gfm/#example-41
================================================================================
## foo ##
  ###   bar    ###

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h2_marker)
    (inline))
  (atx_heading
    (atx_h3_marker)
    (inline)))

================================================================================
Example 42 - https://github.github.com/gfm/#example-42
================================================================================
# foo ##################################
##### foo ##

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h1_marker)
    (inline))
  (atx_heading
    (atx_h5_marker)
    (inline)))

================================================================================
Example 43 - https://github.github.com/gfm/#example-43
================================================================================
### foo ###

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h3_marker)
    (inline)))

================================================================================
Example 44 - https://github.github.com/gfm/#example-44
================================================================================
### foo ### b

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h3_marker)
    (inline)))

================================================================================
Example 45 - https://github.github.com/gfm/#example-45
================================================================================
# foo#

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h1_marker)
    (inline)))

================================================================================
Example 46 - https://github.github.com/gfm/#example-46
================================================================================
### foo \###
## foo #\##
# foo \#

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h3_marker)
    (inline))
  (atx_heading
    (atx_h2_marker)
    (inline))
  (atx_heading
    (atx_h1_marker)
    (inline)))

================================================================================
Example 47 - https://github.github.com/gfm/#example-47
================================================================================
****
## foo
****

--------------------------------------------------------------------------------

(document
  (thematic_break)
  (atx_heading
    (atx_h2_marker)
    (inline))
  (thematic_break))

================================================================================
Example 48 - https://github.github.com/gfm/#example-48
================================================================================
Foo bar
# baz
Bar foo

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline))
  (atx_heading
    (atx_h1_marker)
    (inline))
  (paragraph
    (inline)))

================================================================================
Example 49 - https://github.github.com/gfm/#example-49
================================================================================
##
#
### ###

--------------------------------------------------------------------------------

(document
  (atx_heading
    (atx_h2_marker))
  (atx_heading
    (atx_h1_marker))
  (atx_heading
    (atx_h3_marker)
    (inline)))

================================================================================
Example 50 - https://github.github.com/gfm/#example-50
================================================================================
Foo *bar*
=

Foo *bar*
---------

--------------------------------------------------------------------------------

(document
  (setext_heading
    (paragraph
      (inline))
    (setext_h1_underline))
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline)))

================================================================================
Example 51 - https://github.github.com/gfm/#example-51
================================================================================
Foo *bar
baz*
=

--------------------------------------------------------------------------------

(document
  (setext_heading
    (paragraph
      (inline)
      (inline))
    (setext_h1_underline)))

================================================================================
Example 52 - https://github.github.com/gfm/#example-52
================================================================================
  Foo *bar
baz*
=

--------------------------------------------------------------------------------

(document
  (setext_heading
    (paragraph
      (inline)
      (inline))
    (setext_h1_underline)))

================================================================================
Example 53 - https://github.github.com/gfm/#example-53
================================================================================
Foo
-------------------------

Foo
=

--------------------------------------------------------------------------------

(document
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline))
  (setext_heading
    (paragraph
      (inline))
    (setext_h1_underline)))

================================================================================
Example 54 - https://github.github.com/gfm/#example-54
================================================================================
   Foo
---

  Foo
-----

  Foo
  ===

--------------------------------------------------------------------------------

(document
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline))
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline))
  (setext_heading
    (paragraph
      (inline))
    (setext_h1_underline)))

================================================================================
Example 55 - https://github.github.com/gfm/#example-55
================================================================================
    Foo
    ---

    Foo
---

--------------------------------------------------------------------------------

(document
  (indented_code_block
    (block_continuation))
  (thematic_break))

================================================================================
Example 56 - https://github.github.com/gfm/#example-56
================================================================================
Foo
   ----

--------------------------------------------------------------------------------

(document
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline)))

================================================================================
Example 57 - https://github.github.com/gfm/#example-57
================================================================================
Foo
    ---

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)
    (inline)))

================================================================================
Example 58 - https://github.github.com/gfm/#example-58
================================================================================
Foo
= =

Foo
--- -

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)
    (inline))
  (paragraph
    (inline))
  (thematic_break))

================================================================================
Example 59 - https://github.github.com/gfm/#example-59
================================================================================
Foo
-----

--------------------------------------------------------------------------------

(document
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline)))

================================================================================
Example 60 - https://github.github.com/gfm/#example-60
================================================================================
Foo\
----

--------------------------------------------------------------------------------

(document
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline)))

================================================================================
Example 61 - https://github.github.com/gfm/#example-61
================================================================================
`Foo
----
`

<a title="a lot
---
of dashes"/>

--------------------------------------------------------------------------------

(document
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline))
  (paragraph
    (inline))
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline))
  (paragraph
    (inline)))

================================================================================
Example 62 - https://github.github.com/gfm/#example-62
================================================================================
> Foo
---

--------------------------------------------------------------------------------

(document
  (block_quote
    (block_quote_marker)
    (paragraph
      (inline)))
  (thematic_break))

================================================================================
Example 63 - https://github.github.com/gfm/#example-63
================================================================================
> foo
bar
=

--------------------------------------------------------------------------------

(document
  (block_quote
    (block_quote_marker)
    (paragraph
      (inline)
      (inline)
      (inline))))

================================================================================
Example 64 - https://github.github.com/gfm/#example-64
================================================================================
- Foo
---

--------------------------------------------------------------------------------

(document
  (list
    (list_item
      (list_marker_minus)
      (paragraph
        (inline))))
  (thematic_break))

================================================================================
Example 65 - https://github.github.com/gfm/#example-65
================================================================================
Foo
Bar
---

--------------------------------------------------------------------------------

(document
  (setext_heading
    (paragraph
      (inline)
      (inline))
    (setext_h2_underline)))

================================================================================
Example 66 - https://github.github.com/gfm/#example-66
================================================================================
---
Foo
---
Bar
---
Baz

--------------------------------------------------------------------------------

(document
  (thematic_break)
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline))
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline))
  (paragraph
    (inline)))

================================================================================
Example 67 - https://github.github.com/gfm/#example-67
================================================================================

=

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)))

================================================================================
Example 68 - https://github.github.com/gfm/#example-68
================================================================================
---
---

--------------------------------------------------------------------------------

(document
  (thematic_break)
  (thematic_break))

================================================================================
Example 69 - https://github.github.com/gfm/#example-69
================================================================================
- foo
-----

--------------------------------------------------------------------------------

(document
  (list
    (list_item
      (list_marker_minus)
      (paragraph
        (inline))))
  (thematic_break))

================================================================================
Example 70 - https://github.github.com/gfm/#example-70
================================================================================
    foo
---

--------------------------------------------------------------------------------

(document
  (indented_code_block)
  (thematic_break))

================================================================================
Example 71 - https://github.github.com/gfm/#example-71
================================================================================
> foo
-----

--------------------------------------------------------------------------------

(document
  (block_quote
    (block_quote_marker)
    (paragraph
      (inline)))
  (thematic_break))

================================================================================
Example 72 - https://github.github.com/gfm/#example-72
================================================================================
\> foo
------

--------------------------------------------------------------------------------

(document
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline)))

================================================================================
Example 73 - https://github.github.com/gfm/#example-73
================================================================================
Foo

bar
---
baz

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline))
  (setext_heading
    (paragraph
      (inline))
    (setext_h2_underline))
  (paragraph
    (inline)))

================================================================================
Example 74 - https://github.github.com/gfm/#example-74
================================================================================
Foo
bar

---

baz

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)
    (inline))
  (thematic_break)
  (paragraph
    (inline)))

================================================================================
Example 75 - https://github.github.com/gfm/#example-75
================================================================================
Foo
bar
* * *
baz

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)
    (inline))
  (thematic_break)
  (paragraph
    (inline)))

================================================================================
Example 76 - https://github.github.com/gfm/#example-76
================================================================================
Foo
bar
\---
baz

--------------------------------------------------------------------------------

(document
  (paragraph
    (inline)
    (inline)
    (inline)
    (inline)))

================================================================================
Example 77 - https://github.github.com/gfm/#example-77
================================================================================
    a simple
      indented code block

--------------------------------------------------------------------------------

(document
  (indented_code_block
    (block_continuation)))

================================================================================
Example 78 - https://github.github.com/gfm/#example-78
================================================================================
  - foo

    bar

--------------------------------------------------------------------------------

(document
  (list
    (list_item
      (list_marker_minus)
      (paragraph
        (inline)
        (block_continuation))
      (block_continuation)
      (paragraph
        (inline)))))

================================================================================
Example 79 - https://github.github.com/gfm/#example-79
================================================================================
1.  foo

    - bar

--------------------------------------------------------------------------------

(document
  (list
    (list_item
      (list_marker_dot)
      (paragraph
        (inline)
        (block_continuation))
      (block_continuation)
      (list
        (list_item
          (list_marker_minus)
          (paragraph
            (inline)))))))
